Remove GPS references - game does not use location data

--- a/PRIVACY_POLICY_SKETCH_CIRCLE.html
+++ b/PRIVACY_POLICY_SKETCH_CIRCLE.html
@@ -74,7 +74,7 @@
 <body>
     <div class="container">
         <h1>Privacy Policy for Sketch Circle</h1>
-        <p class="updated"><strong>Last Updated:</strong> February 7, 2026</p>
+        <p class="updated"><strong>Last Updated:</strong> February 7, 2026 (v2)</p>
 
         <h2>1. Introduction</h2>
         <p>Sketch Circle ("the Game") is committed to protecting your privacy. This Privacy Policy explains how we handle your information when you use our Game.</p>
@@ -92,13 +92,12 @@
         <h3>2.2 Device Permissions</h3>
         <p>The Game requires the following device permissions for gameplay purposes:</p>
         <ul>
-            <li><strong>GPS/Location</strong>: Used to determine player location for location-based gameplay mechanics within the Game. This data is processed entirely on your device and is never transmitted.</li>
             <li><strong>Bluetooth</strong>: Used to enable multiplayer connectivity between nearby devices. Connection data is transmitted only between devices on your local network and is not sent to external servers.</li>
             <li><strong>WiFi</strong>: Used to detect available networks for local multiplayer connectivity. WiFi scanning data is processed locally on your device only.</li>
         </ul>
 
         <div class="highlight-box">
-            <strong>Important:</strong> All location and connectivity data is processed locally on your device and never leaves your device.
+            <strong>Important:</strong> All connectivity data is processed locally on your device and never leaves your device.
         </div>
 
         <h2>3. In-App Purchases</h2>
